--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="slider_text text-center justify-content-center">
                             <p>Ofrecemos boxes de 2,5 y 5 mt2.</p>
                             <h3>La solución para tus archivos empresariales</h3>
-                                <a class="boxed-btn3" href="service.html">Saber m&aacute;s</a>
+                                <a class="boxed-btn3" href="#services">Saber m&aacute;s</a>
                         </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
                             </ul>
 
                             <div class="about_btn">
-                                <a class="boxed-btn3-line" href="#testimonial_area">Nosotros</a>
+                                <a class="boxed-btn3-line" href="#testimonial_area">Cont&aacute;ctenos</a>
                             </div>
                         </div>
                     </div>
