--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>MultiBox</title>
+    <title>MultiBox - Flexible Storage</title>
     <meta name="description" content="La soluci&oacute;n para tus archivos.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -57,7 +57,7 @@
                                     </ul>
                                 </div>
                                 <div class="book_btn d-none d-lg-block">
-                                    <a class="boxed-btn3-line" href="https://web.whatsapp.com/send?phone=59895571542" target="_blank">Chatea con nosotros</a>
+                                    <a class="boxed-btn3" href="https://web.whatsapp.com/send?phone=59895571542" target="_blank">Chatea con nosotros</a>
                                 </div>
                             </div>
                         </div>
@@ -105,10 +105,10 @@
         <div class="single_slider  d-flex align-items-center slider_bg_1">
             <div class="container">
                 <div class="row align-items-center justify-content-center">
-                    <div class="col-xl-8">
+                    <div class="col-lg-12 col-md-6">
                         <div class="slider_text text-center justify-content-center">
-                            <p>Ofrecemos boxes de 2,5 y 5 mt2.</p>
-                            <h3>La solución para tus archivos empresariales</h3>
+                            <h3>Guarda lo que quieras y gana espacio.</h3>
+                            <h4>Libera espacio en tu apartamento u oficina, despejando objetos o archivos que no usas de forma frecuente.</h4>
                                 <a class="boxed-btn3" href="#services">Saber m&aacute;s</a>
                         </div>
                     </div>
@@ -126,8 +126,11 @@
                 <div class="col-xl-12">
                     <div class="section_title mb-50 text-center">
                         <h3>
-                            Nuestros Servicios
+                            Servicio de guarder&iacute;a y dep&oacute;sito de todo tipo de objetos, documentaci&oacute;n y archivos pasivos.
                         </h3>
+                        <h4 style="margin-top:2em;color: grey;">
+                            La soluci&oacute;n ideal para particulares y empresas.
+                        </h4>
                     </div>
                 </div>
             </div>
@@ -136,38 +139,29 @@
                     <div class="service_active owl-carousel">
                         <div class="single_service">
                             <div class="thumb">
-                                <img src="img/service/1.png" alt="">
+                                <img src="img/service/pibe.jpg" alt="">
                             </div>
                             <div class="service_info">
-                                <h3><a href="service_details.html">Ocean Freight</a></h3>
-                                <p>Esteem spirit temper too say adieus who direct esteem.</p>
+                                <h3><a href="service_details.html">Boxes</a></h3>
+                                <p>Te ofrecemos boxes de tama&ntilde;o personalizable. 2.5, 5, 10 y 20 mts2.</p>
                             </div>
                         </div>
                         <div class="single_service">
                             <div class="thumb">
-                                <img src="img/service/2.png" alt="">
+                                <img src="img/service/key.jpg" alt="">
                             </div>
                             <div class="service_info">
-                                <h3><a href="service_details.html">Land Transport</a></h3>
-                                <p>Esteem spirit temper too say adieus who direct esteem.</p>
+                                <h3><a href="service_details.html">Acceso Privado</a></h3>
+                                <p>Acceso totalmente privado con llaves individuales.</p>
                             </div>
                         </div>
                         <div class="single_service">
                             <div class="thumb">
-                                <img src="img/service/3.png" alt="">
+                                <img src="img/service/lifter.jpg" alt="">
                             </div>
                             <div class="service_info">
-                                <h3><a href="service_details.html">Air Freight</a></h3>
-                                <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                            </div>
-                        </div>
-                        <div class="single_service">
-                            <div class="thumb">
-                                <img src="img/service/1.png" alt="">
-                            </div>
-                            <div class="service_info">
-                                <h3><a href="service_details.html">Ocean Freight</a></h3>
-                                <p>Esteem spirit temper too say adieus who direct esteem.</p>
+                                <h3><a href="service_details.html">Servicio de carga y descarga.</a></h3>
+                                <p>Contamos con personal especializado para manipular tus paquetes cualquiera sea su peso.</p>
                             </div>
                         </div>
                     </div>
@@ -176,25 +170,6 @@
         </div>
     </div>
 
-    <!-- contact_action_area  -->
-    <div class="contact_action_area" id="depositos">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-xl-7 col-md-6">
-                    <div class="action_heading">
-                        <h3>100% seguro y protegido</h3>
-                        <p>Nuestros boxes fueron acondicionados para una mayor protecci&oacute;n ante fen&oacute;menos clim&aacute;ticos, cambios de temperatura, etc.</p>
-                    </div>
-                </div>
-                <div class="col-xl-5 col-md-6">
-                    <div class="call_add_action">
-                        <a href="https://web.whatsapp.com/send?phone=59895571542" target="_blank" class="boxed-btn3">095 571 542</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /contact_action_area  -->
     <!-- chose_area  -->
     <div class="chose_area " id="nosotros">
         <div class="container">
@@ -210,13 +185,12 @@
                             <h3>Por qu&eacute; elegirnos? </h3>
                             <p>Somos una empresa con años de experiencia en el tema. Esto le garantiza la confianza necesaria para estar tranquilo, sabiendo que sus pertenencias est&aacute;n seguras.</p>
                             <ul>
-                                <li> Ubicación accesible desde cualquier punto de la ciudad. </li>
-                                <li> Espacios acondicionados especialmente para una mayor protección ante inclemencias clim&aacute;ticas. </li>
-                                <li> La seguridad de contar con una empresa con años de experiencia en el rubro.</li>
+                                <li> Contratos de alquiler mensual, renovables autom&aacute;ticamente. </li>
+                                <li> Acceso privado con llaves individuales.</li>
+                                <li> Seguro total con BSE.</li>
                             </ul>
-
                             <div class="about_btn">
-                                <a class="boxed-btn3-line" href="#testimonial_area">Cont&aacute;ctenos</a>
+                                <a class="boxed-btn3-line" href="#contact">Cont&aacute;ctenos</a>
                             </div>
                         </div>
                     </div>
@@ -226,6 +200,67 @@
     </div>
     <!--/ chose_area  -->
 
+    <!-- contact_action_area  -->
+    <div class="contact_action_area" id="depositos">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-7 col-md-6">
+                    <div class="action_heading">
+                        <h3>100% seguro y protegido</h3>
+                        <p>Acceso privado con llaves individuales. Sistema de vigilancia f&iacute;sica, electr&oacute;nica y telem&aacute;tica.</p>
+                    </div>
+                </div>
+                <div class="col-xl-5 col-md-6">
+                    <div class="call_add_action">
+                        <a href="https://web.whatsapp.com/send?phone=59895571542" target="_blank" class="boxed-btn3"> 095 571 542</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /contact_action_area  -->
+    <div class="transportaion_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title mb-50 text-center">
+                        <h3>
+                            Tus archivos en buenas manos.
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="single_transport">
+                        <div class="icon">
+                            <img src="img/svg_icon/storage.svg" alt="" style="width: 40%;">
+                        </div>
+                        <h3>Contratos Mensuales</h3>
+                        <p>Contratos de alquiler mensuales, renovables autom&aacute;ticamente.</p>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="single_transport">
+                        <div class="icon">
+                            <img src="img/svg_icon/thumbsup.svg" alt="">
+                        </div>
+                        <h3>Acceso privado con llaves individuales</h3>
+                        <p>Obtienes una llave individual de tu box.</p>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="single_transport">
+                        <div class="icon">
+                            <img src="img/svg_icon/security.svg" alt="">
+                        </div>
+                        <h3>Seguro total con BSE</h3>
+                        <p>Tus pertenencias est&aacute;n aseguradas gracias seguro total del BSE.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- testimonial_area  -->
     <div class="testimonial_area">
         <div class="container">
@@ -289,49 +324,26 @@
         </div>
     </div>
     <!-- /testimonial_area  -->
-
-    <div class="transportaion_area">
+    
+    <!-- contact_location  -->
+    <div class="contact_location">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-50 text-center">
                         <h3>
-                            Tus archivos en buenas manos.
+                            Luis de la Torre 579,
                         </h3>
+                        <h4>a metros de 21 de Setiembre.</h4>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_transport">
-                        <div class="icon">
-                            <img src="img/svg_icon/storage.svg" alt="" style="width: 40%;">
-                        </div>
-                        <h3>Almacenamiento</h3>
-                        <p>Nuestros almacenes cuentan con todas las medidas de seguridad y est&aacute;n acondicionados para un &oacute;ptimo mantenimiento de tus pertentencias.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_transport">
-                        <div class="icon">
-                            <img src="img/svg_icon/security.svg" alt="">
-                        </div>
-                        <h3>Seguridad 24/7</h3>
-                        <p>La seguridad de contar con personal especializado para el mantenimiento de los boxes.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_transport">
-                        <div class="icon">
-                            <img src="img/svg_icon/thumbsup.svg" alt="">
-                        </div>
-                        <h3>Atenci&oacute;n personalizada</h3>
-                        <p>Ante cualquier duda o consulta estamos a tu disposici&oacute;n para asesorarte.</p>
-                    </div>
-                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1945.2596127368377!2d-56.159789444179246!3d-34.91840137138466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81758a76763d%3A0xa75111335cdf0b1c!2sLuis%20de%20la%20Torre%20579%2C%2011300%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1sen!2suy!4v1636726510704!5m2!1sen!2suy" width="1400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </div>
+    <!--/ contact_location  -->
 
     <!-- Estimate_area start  -->
     <div class="Estimate_area overlay" id="contacto">
@@ -399,8 +411,7 @@
                 <div class="col-xl-3 col-md-3">
                     <div class="single_location">
                         <h3> <img src="img/icon/address.svg" alt=""> Ubicaci&oacute;n</h3>
-                        <p>600/D, Kings road, Green lane
-                            NewYork-2563</p>
+                        <p>Luis de la Torre 579, a metros de 21 de Setiembre.</p>
                     </div>
                 </div>
             </div>
@@ -426,6 +437,8 @@ Copyright &copy; MultiBox<script>document.write(new Date().getFullYear());</scri
         </div>
     </footer>
     <!--/ footer end  -->
+
+
 <!-- Button trigger modal -->
   
   <!-- Modal -->
