--- a/index.html
+++ b/index.html
@@ -41,19 +41,23 @@
             <div class="header-top_area d-none d-lg-block">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-xl-4 col-lg-4">
+                        <div class="col-xl-2 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
                                     <img src="img/logo.png" alt="">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xl-8 col-md-8">
+                        <div class="col-xl-10 col-md-10">
                             <div class="header_right d-flex align-items-center">
                                 <div class="short_contact_list">
                                     <ul>
                                         <li><a href="mailto:pcsolutia@gmail.com"> <i class="fa fa-envelope"></i> pcsolutia@gmail.com</a></li>
-                                        <li><a href="https://web.whatsapp.com/send?phone=59895571542" target="_blank"> <i class="fa fa-phone"></i>095 571 542</a></li>
+                                        <span style="font-size: 1.25em; color: Tomato;">
+                                            <li>
+                                                <a href="https://web.whatsapp.com/send?phone=59895571542" target="_blank"><i class="fa fa-whatsapp" ></i>095 571 542</a>
+                                            </li>
+                                        </span>
                                     </ul>
                                 </div>
                                 <div class="book_btn d-none d-lg-block">
@@ -126,7 +130,7 @@
                 <div class="col-xl-12">
                     <div class="section_title mb-50 text-center">
                         <h3>
-                            Servicio de guarder&iacute;a y dep&oacute;sito de todo tipo de objetos, documentaci&oacute;n y archivos pasivos.
+                            Servicio de dep&oacute;sito y guarder&iacute;a de todo tipo de objetos, documentaci&oacute;n y archivos pasivos.
                         </h3>
                         <h4 style="margin-top:2em;color: grey;">
                             La soluci&oacute;n ideal para particulares y empresas.
@@ -234,7 +238,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_transport">
                         <div class="icon">
-                            <img src="img/svg_icon/storage.svg" alt="" style="width: 40%;">
+                            <img src="img/svg_icon/contract.svg" alt="" style="width: 40%;">
                         </div>
                         <h3>Contratos Mensuales</h3>
                         <p>Contratos de alquiler mensuales, renovables autom&aacute;ticamente.</p>
@@ -243,9 +247,9 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_transport">
                         <div class="icon">
-                            <img src="img/svg_icon/thumbsup.svg" alt="">
+                            <img src="img/svg_icon/lock.svg" alt="">
                         </div>
-                        <h3>Acceso privado con llaves individuales</h3>
+                        <h3>Acceso privado.</h3>
                         <p>Obtienes una llave individual de tu box.</p>
                     </div>
                 </div>
