--- a/index.html
+++ b/index.html
@@ -641,17 +641,17 @@
                             <div class="row">
                                 <div class="col-xl-6">
                                     <div class="input_field">
-                                        <input type="text" placeholder="Nombre">
+                                        <input type="text" name="name" placeholder="Nombre">
                                     </div>
                                 </div>
                                 <div class="col-xl-6">
                                     <div class="input_field">
-                                        <input type="email" placeholder="Email">
+                                        <input type="email" name="email" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="col-xl-12">
                                     <div class="input_field">
-                                        <textarea placeholder="Mensaje"></textarea>
+                                        <textarea name="message" placeholder="Mensaje"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-xl-12">
