--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                 </div>
                 <div class="col-xl-8 col-lg-8 col-md-7">
                     <div class="form">
-                        <form action="#">
+                        <form id="contact-form" action="contact.php" method="post">
                             <div class="row">
                                 <div class="col-xl-6">
                                     <div class="input_field">
