--- a/mensaje_enviado.html
+++ b/mensaje_enviado.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-6">
                     <div class="slider_text text-center justify-content-center">
-                        <a class="boxed-btn3" href="#services">Saber más</a>
+                        <a class="boxed-btn3" href="https://pocitosbox.uy/">Volver</a>
                     </div>
                 </div>
             </div>
