--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>MultiBox - Flexible Storage</title>
+    <title>PocitosBox - Storage Service</title>
     <meta name="description" content="La soluci&oacute;n para tus archivos.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
